# clier

./: CMakeLists.txt  CMakeLists.txt.txt  CONTRIBUTING.md  LICENSE  README.md  Server.sln  TcpCommunication.sln  appveyor.yml  conanfile.txt  conanfile.txt.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
Client/: CMakeLists.txt  CMakeLists.txt.txt  Client.cpp  Client.vcxproj  Client.vcxproj.filters  packages.config
Sever/: CMakeLists.txt  Sever.cpp  Sever.vcxproj  Sever.vcxproj.filters  cei_packet.h  client_output.txt  packages.config  program_options.hpp  tcp_client.h  tcp_connection.h  tcp_server.h
communication/: tcp_client.h  tcp_connection.h  tcp_server.h
include/cliver/asio/ip/: tcp_client.hpp  tcp_server.hpp
include/tools/: locks.hpp
include/tools/asio/ip/: tcp_client.h  tcp_client.hpp  tcp_server.h  tcp_server.hpp
protocol/: cei_packet.h  connections_guard.h  connections_guard.hpp  packet_builder.h  packet_builder.hpp
