cmake_minimum_required(VERSION 3.0.0)

project(Cliver)

set(CMAKE_CXX_STANDARD 14)
set(CXX_STANDARD_REQUIRED TRUE)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug"
AND NOT CMAKE_BUILD_TYPE STREQUAL "Release"
AND NOT CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo"
AND NOT CMAKE_BUILD_TYPE STREQUAL "MinSizeRel")
	set(CMAKE_BUILD_TYPE "Debug")
endif()

set(CMAKE_CONFIGURATION_TYPES ${CMAKE_BUILD_TYPE})

set(CMAKE_STATIC_LIBRARY_PREFIX "")

add_subdirectory(Client)
add_subdirectory(Sever)
